# prowler-technical-exercises

./: .gitignore  README.md
exercise_1/: .env.template  README.md  docker-compose.yml
exercise_1/report/: output.json
exercise_2/: .env.template  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
exercise_2/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
exercise_2/api/fixtures/: initial_data.json
exercise_2/api/management/commands/: populatedb.py
exercise_2/api/migrations/: 0001_initial.py
exercise_2/prowler_manager/: asgi.py  settings.py  urls.py  wsgi.py
exercise_2/prowler_manager/settings/: base.py  local.py  production.py  test.py
exercise_2/scans/: admin.py  models.py  serializers.py  urls.py  views.py
exercise_2/scans/management/commands/: populate_db.py
exercise_2/scans/migrations/: 0001_initial.py
exercise_3/: README.md
